# pep-323

./: README.md  dev.ipynb  dev2.ipynb  dev3.ipynb  helpers.py  license  main.py  old.ipynb  pyproject.toml
etc/: README.md  dev2.ipynb  main.py  old.ipynb  test_code.py  test_main.py
examples/: examples.ipynb
gcopy/: comments.md  comments.py  custom_generator.md  custom_generator.py  license  license.md  my_copy.py  source_processing.py  track.py  user guide.md  util.py  utils.py
gcopy2/: my_copy.py
tests/: test_code.py  test_custom_generator.py  test_main.py  test_source_processing.py  test_track.py  test_utils.py
tests/data/: test.pkl
