[tool.poetry]
name = "pep-323"
version = "0.1.0"
description = ""
authors = ["Your Name <pablo.r.c@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.1"
pytest = "^8.1.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"
coverage = "^7.6.7"
mypy = "^1.14.0"
black = { extras = ["jupyter"], version = "^24.10.0" }
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
